--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-pandas==2.1.0
-plotly==5.17.0
-pdfkit==1.0.0
-Werkzeug==2.3.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-itsdangerous==2.1.2
-SQLAlchemy==2.0.22
-python-dateutil==2.8.2
-click==8.1.7
-numpy==1.26.0
-pytz==2023.3
-six==1.16.0
-Pillow==10.0.1
-gunicorn==21.2.0 
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Login==0.5.0
+Flask-WTF==0.15.1
+SQLAlchemy==1.4.23
+Werkzeug==2.0.1
+WTForms==2.3.3
+email-validator==1.1.3
+python-dotenv==0.19.0
+PyPDF2==1.26.0
+reportlab==3.6.1
+Pillow==8.3.1
+openpyxl==3.0.9
+pytest==6.2.5
+black==21.8b0
+flake8==3.9.2
+gunicorn==20.1.0 
